# fasta_generator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mysite/app_config/: asgi.py  settings.py  urls.py  views.py  wsgi.py
mysite/app_folder/: urls.py  views.py
mysite/templates/: base.html
mysite/templates/app_folder/: page01.html  page02.html  top_page.html
